--- a/trunk/IntraSell_WebShop/skins/skin_arfaian_2009/pages/productPage_part_common.htm
+++ b/trunk/IntraSell_WebShop/skins/skin_arfaian_2009/pages/productPage_part_common.htm
@@ -1,5 +1,5 @@
 <div align="center">
-	<table border="0" cellpadding="0" style="border-collapse: collapse" bordercolor="#111111" width="840" id="AutoNumber75" height="84">
+	<table border="0" cellpadding="0" style="border-collapse: collapse" bordercolor="#111111" width="100%" id="AutoNumber75" height="84">
 		<tr>
 			<td width="5%" valign="top" height="27">&nbsp; </td>
 			<td width="95%" valign="top" colspan="2" height="27"><b><br>
@@ -25,13 +25,16 @@
 								<p align="right">[Bezeichnung1] </p>
 								</td>
 							</tr>
-							<tr>
-								<td height="13" class="style1"><font size="1">
-								<b>ART NR.</b></font> </td>
-								<td width="49%" height="13">
-								<p align="right">[ArtNr] </p>
-								</td>
-							</tr>
+							<!--<tr>
+                                        <td height="13" class="style1">
+                                            <font size="1"><b>ART NR.</b></font>
+                                        </td>
+                                        <td width="49%" height="13">
+                                            <p align="right">
+                                            [ArtNr]
+                                        </td>
+                                    </tr>
+                                    -->
 							<tr>
 								<td height="13" class="style1"><font size="1">
 								<b>[TRANSLATION:KATALOG NUMMER]</b></font> </td>
@@ -106,9 +109,15 @@
 		<tr>
 			<td width="67%" valign="top" height="63" align="center">
 			<font size="1" face="Verdana">[HTMLInfo]<br>
-&nbsp; <a href="#" onclick="window.open('productImages/thumbnail.aspx?width=600&amp;filename=[Picture]','Invoice','top=100,left=100,height=640,width=640,status=yes,toolbar=yes,menubar=no,location=no');">
-			<img border="0" src="productImages/thumbnail.aspx?width=200&filename=[Picture]" /></a>&nbsp;&nbsp;
-			</font></td>
+			<!--[makeImgTagName:productimages_large/[ArtNr].gif]-->
+			<a href="#" onclick="window.open('productImages_large/[ArtNr].gif','Invoice','top=100,left=100,height=640,width=640,status=yes,toolbar=yes,menubar=no,location=no');">
+                <!--<img border="0" src="productImages/thumbnail.aspx?width=200&amp;filename=productImages/[ArtNr].gif" />-->
+                [makeImgTagName:productimages/[ArtNr].gif]</a>
+                
+			<!-- <a href="#" onclick="window.open('productImages/thumbnail.aspx?width=600&amp;filename=[Picture]','Invoice','top=100,left=100,height=640,width=640,status=yes,toolbar=yes,menubar=no,location=no');">
+                 <img border="0" src="productImages/thumbnail.aspx?width=200&amp;filename=[Picture]" />
+                </a>
+             -->&nbsp;&nbsp; </font></td>
 		</tr>
 		<tr>
 			<td width="5%" valign="top" height="13"></td>
@@ -121,40 +130,47 @@
 				<tr>
 					<td>
 					<table border="0" cellpadding="0" style="border-collapse: collapse" bordercolor="#111111" width="300" id="table11">
-						<tr>
-							<td align="center">
-							<img border="0" src="../images/icons/bookmark_add.png" vspace="2">
-							</td>
-							<td>
-							<a onclick="window.open('Bookmark','Bookmark','top=300,left=300,height=100,width=200,status=yes,toolbar=no,menubar=no,location=no');" href="defaultPrintEdition.asp?pageToShow=SaveBookmark&Title=[Bezeichnung]&Folder=Produkte&URL=default.asp?ArtNr=[ArtNr]" target="Bookmark">
-							[TRANSLATION:Produkt speichern]</a> </td>
-						</tr>
-						<tr>
-							<td width="14%" align="center" height="18">
-							<img border="0" src="../images/icons/dude4.png" vspace="2">
-							</td>
-							<td width="63%" height="18">
-							<a onclick="window.open('SendToFriend','SendToFriend','top=300,left=300,height=400,width=600,status=yes,toolbar=no,menubar=no,location=no');" href="cgi/calls/sendToFriend.asp?ArtNr=[ArtNr]" target="SendToFriend">
-							[TRANSLATION:Produkt einem Freund empfehlen]</a>
-							</td>
-						</tr>
-						<tr>
-							<td width="14%" align="center" height="18">
-							<img border="0" src="../images/small_logos/mail.gif" vspace="2">
-							</td>
-							<td width="63%" height="18">
-							<a onclick="window.open('Newsletter','Newsletter','top=300,left=300,height=400,width=600,status=yes,toolbar=no,menubar=no,location=no');" href="cgi/calls/requestJob.asp?ProductID=[ArtNr]&Job=EmailBeiLieferbarkeit" target="Newsletter">
-							[TRANSLATION:Email bei Lieferbarkeit aktivieren] </a>
-							</td>
-						</tr>
-						<tr>
-							<td width="14%" align="center" height="13">
-							<img border="0" src="../images/icons/telephone.png" vspace="2" />
-							</td>
-							<td width="123" align="left"><font color="#666666">
-							<a onclick="window.open('CallMeBack','CallMeBack','top=300,left=300,height=400,width=600,status=yes,toolbar=no,menubar=no,location=no');" href="cgi/calls/callMeBack.asp?ArtNr=[ArtNr]" target="CallMeBack" style="text-align: left">
-							[TRANSLATION:Rückruf]</a></font> </td>
-						</tr>
+						<!-- <tr>
+                                    <td align="center">
+                                        <img border="0" src="../images/icons/bookmark_add.png" vspace="2">
+                                    </td>
+                                    <td>
+                                        <a onclick="window.open('Bookmark','Bookmark','top=300,left=300,height=100,width=200,status=yes,toolbar=no,menubar=no,location=no');"
+                                            href="defaultPrintEdition.asp?pageToShow=SaveBookmark&amp;Title=[Bezeichnung]&amp;Folder=Produkte&amp;URL=default.asp?ArtNr=[ArtNr]"
+                                            target="Bookmark">[TRANSLATION:Produkt speichern]</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td width="14%" align="center" height="18">
+                                        <img border="0" src="../images/icons/dude4.png" vspace="2">
+                                    </td>
+                                    <td width="63%" height="18">
+                                        <a onclick="window.open('SendToFriend','SendToFriend','top=300,left=300,height=400,width=600,status=yes,toolbar=no,menubar=no,location=no');"
+                                            href="cgi/calls/sendToFriend.asp?ArtNr=[ArtNr]" target="SendToFriend">[TRANSLATION:Produkt
+                                            einem Freund empfehlen]</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td width="14%" align="center" height="18">
+                                        <img border="0" src="../images/small_logos/mail.gif" vspace="2">
+                                    </td>
+                                    <td width="63%" height="18">
+                                        <a onclick="window.open('Newsletter','Newsletter','top=300,left=300,height=400,width=600,status=yes,toolbar=no,menubar=no,location=no');"
+                                            href="cgi/calls/requestJob.asp?ProductID=[ArtNr]&Job=EmailBeiLieferbarkeit" target="Newsletter">
+                                            [TRANSLATION:Email bei Lieferbarkeit aktivieren] </a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td width="14%" align="center" height="13">
+                                        <img border="0" src="../images/icons/telephone.png" vspace="2" />
+                                    </td>
+                                    <td width="123" align="left">
+                                        <font color="#666666"><a onclick="window.open('CallMeBack','CallMeBack','top=300,left=300,height=400,width=600,status=yes,toolbar=no,menubar=no,location=no');"
+                                            href="cgi/calls/callMeBack.asp?ArtNr=[ArtNr]" target="CallMeBack" style="text-align: left">
+                                            [TRANSLATION:Rückruf]</a></font>
+                                    </td>
+                                </tr>
+                                -->
 						<tr>
 							<td width="14%" align="center" height="13">
 							<img border="0" src="../images/icons/printer.png" vspace="2">
@@ -193,9 +209,10 @@
 			-->
 			<p align="center">
 			<a href="#" onclick="window.open('productImages/thumbnail.aspx?width=600&amp;filename=productImages/[ArtNr]_1.gif','Invoice','top=100,left=100,height=640,width=640,status=yes,toolbar=yes,menubar=no,location=no');">
-			<img border="0" src="productImages/thumbnail.aspx?width=200&filename=productImages/[ArtNr]_1.gif" /></a>&nbsp;&nbsp;
+			<img border="0" src="productImages/thumbnail.aspx?width=200&filename=productImages/[ArtNr]_1.gif" /></a>&nbsp; 
 			<a href="#" onclick="window.open('productImages/thumbnail.aspx?width=600&amp;filename=productImages/[ArtNr]_2.gif','Invoice','top=100,left=100,height=640,width=640,status=yes,toolbar=yes,menubar=no,location=no');">
 			<img border="0" src="productImages/thumbnail.aspx?width=200&filename=productImages/[ArtNr]_2.gif" /></a>&nbsp;
+			<br>
 			<a href="#" onclick="window.open('productImages/thumbnail.aspx?width=600&amp;filename=productImages/[ArtNr]_3.gif','Invoice','top=100,left=100,height=640,width=640,status=yes,toolbar=yes,menubar=no,location=no');">
 			<img border="0" src="productImages/thumbnail.aspx?width=200&filename=productImages/[ArtNr]_3.gif" /></a>&nbsp;
 			<a href="#" onclick="window.open('productImages/thumbnail.aspx?width=600&amp;filename=productImages/[ArtNr]_4.gif','Invoice','top=100,left=100,height=640,width=640,status=yes,toolbar=yes,menubar=no,location=no');">
