--- a/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_ptec/pages/account/myAccountLogin.htm
+++ b/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_ptec/pages/account/myAccountLogin.htm
@@ -79,7 +79,7 @@ function PasswordSend() {
 		a.document.write ("<table width=100% border=1 cellspacing=0 bordercolor=#0000A0><tr><td><BIG>Passwort vergessen?</BIG></td></tr>\n");
 		a.document.write ("<tr><td align=center>Tragen Sie bitte hier Ihren Nachnamen und Emailadresse.&nbsp;<br> Das Passwort wird sofort gesendet.&nbsp;&nbsp;&nbsp;</td></tr></table>\n");
 		a.document.write("<br>");
-		a.document.write ("<form action='cgi/account/DoSendPassword.asp' method='post'>\n");
+		a.document.write ("<form action='/cgi/account/DoSendPassword.aspx' method='post'>\n");
 		a.document.write ("<TABLE align=center border=1 borderColor=green cellPadding=3 cellSpacing=0>\n");
 		a.document.write ("<TR>\n");
 		a.document.write ("<Th align=right><B>Name:*</B></Th>\n");
