--- a/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/admin/loginForm.html
+++ b/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/admin/loginForm.html
@@ -23,7 +23,7 @@
                     <font face="Verdana" size="2">User Name : </font>
                 </td>
                 <td width="150">
-                    <input type="text" name="username" size="20">
+                    <input type="text" name="username" size="20" style="width: 150px" />
                 </td>
             </tr>
             <tr>
@@ -31,7 +31,7 @@
                     <font face="Verdana" size="2">Password : </font>
                 </td>
                 <td width="150">
-                    <input type="password" name="userpwd" size="20">
+                    <input type="password" name="userpwd" size="20" style="width: 150px" >
                 </td>
             </tr>
             <tr>
